--- a/templates/release.html
+++ b/templates/release.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>功夫量化</title>
+    <title>{{title}}</title>
     <meta name="theme-color" content="#e9ecef">
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
@@ -78,12 +78,12 @@
     <div class="container">
         <div class="card" style="width: 100%; margin-top: 2em;">
             <div class="card-body">
-                <h3>kungfu-trader</h3>
-                <p class="card-text">Kungfu Trader is a trading platform for quantitative trading.</p>
+                <h3>{{product}}</h3>
+                <p class="card-text">{{description}}</p>
                 <div style="margin-left: -0.5em;">
-                    <a href="https://releases.kungfu-trader.com/kungfu-trader/release-stable.html" target="_blank"
+                    <a href="https://releases.kungfu-trader.com/{{product}}/release-stable.html" target="_blank"
                         class="btn btn-primary" style="margin: .5em">Check
-                        kungfu-trader Releases</a>
+                        {{product}} Releases</a>
                     <a href="https://releases.kungfu-trader.com/artifact-kungfu/release-stable.html" target="_blank"
                         class="btn btn-primary" style="margin: .5em">Check
                         artifact-kungfu Releases</a>
@@ -132,9 +132,6 @@
         <a rel="external" title="备案号" class="link" href="http://beian.miit.gov.cn">京ICP备19056728号-1</a>
     </footer>
     <script>
-        const baseUrl = "https://releases.kungfu-trader.com/";
-        const baseRepo = "kungfu-trader";
-
         window.onload = function () {
             document.querySelectorAll('.core-link').forEach(item => {
                 item.addEventListener('click', (e) => {
@@ -143,23 +140,6 @@
                     location.href = item.getAttribute('data-href');
                 })
             });
-        }
-
-        const generateItem = (obj) => {
-            return `
-                <a href="${obj.url}"
-                    class="list-group-item list-group-item-action" aria-current="true">
-                    <div class="release-item">
-                        <div class="release-item-left">${obj.version}</div>
-                        <div class="release-item-right">
-                            <div data-href="${obj.coreUrl}" class="core-link">
-                                <span>kungfu-core</span>
-                                <span class="badge rounded-pill bg-primary">${obj.coreVersion}</span>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            `
         };
     </script>
 </body>
