--- a/templates/release.html
+++ b/templates/release.html
@@ -4,127 +4,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
+    <title>Previous Release | {{title}}</title>
     <meta name="theme-color" content="#e9ecef">
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+    <link href="https://cdn.staticfile.org/layui/2.8.18/css/layui.min.css" rel="stylesheet">
+    <script src="https://cdn.staticfile.org/layui/2.8.18/layui.min.js"></script>
     <style>
         html,
         body {
-            background-color: var(--bs-gray-200);
-        }
-
-        .notes-header {
             background-color: #fff;
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+            font-size: 15px;
         }
 
-        .notes-header .container {
+        .container {
+            width: 95%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .panel {
+            box-sizing: border-box;
+            min-height: 400px;
+            min-height: calc(100vh - 259px);
+            padding-bottom: 36px;
+        }
+
+        @media (min-width: 578px) {
+            .container {
+                max-width: 540px;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .container {
+                max-width: 720px;
+            }
+        }
+
+
+        @media (min-width: 992px) {
+            .container {
+                max-width: 960px;
+            }
+        }
+
+
+        @media (min-width: 1200px) {
+            .container {
+                max-width: 1140px;
+            }
+        }
+
+        @media (min-width: 1400px) {
+            .container {
+                max-width: 1240px;
+            }
+        }
+
+        .header {
+            background-color: #000;
+            height: 91px;
+        }
+
+        .header .container {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 92px;
+            height: 100%;
         }
 
-        a {
-            color: var(--bs-body-color);
-            text-decoration: none;
-        }
-
-        a:hover {
-            transition: all .2s;
-            color: var(--bs-blue);
+        .card-text {
+            padding: 12px 0;
         }
 
         .footer {
+            height: 80px;
             text-align: center;
-            padding: 2em 0 2em;
-            font-size: .9rem;
+            background-color: #eeeeee;
+            padding: 20px 0;
+            color: #4b4f58;
+            line-height: 24px;
         }
 
-        .release-item {
-            display: flex;
-            align-items: center;
-            padding: 1em;
-            flex-wrap: nowrap;
+        a {
+            color: #0170b9;
+            text-decoration: none;
         }
 
-        .release-item-left {
-            flex: 1;
-            font-weight: 600;
-            padding-right: 2em;
+        .layui-btn a {
+            color: inherit;
         }
 
-        .core-link {
-            margin: 0 2em;
-            text-align: center;
+        .layui-bg-blue {
+            background: #0066B8;
+        }
+
+        #table-container {
+            transition: all .2s;
         }
     </style>
 </head>
 
 <body>
-    <header class="notes-header">
+    <header class="header">
         <div class="container">
-            <img width="300" height="61"
-                src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网-300x61.png"
-                class="custom-logo" alt="功夫量化" decoding="async"
-                srcset="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网-300x61.png 300w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网-1024x208.png 1024w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网-768x156.png 768w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网-1536x312.png 1536w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网-600x122.png 600w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2022/12/cropped-功夫量化图标-官网.png 1983w"
-                sizes="(max-width: 300px) 100vw, 300px">
+            <a href="https://www.kungfu-trader.com/">
+                <img width="300" height="61"
+                    src="https://s3.cn-northwest-1.amazonaws.com.cn/dev.kungfu-trader.com/uploads/2023/11/cropped-功夫量化图标-官网_7-300x62.png"
+                    class="custom-logo" alt="功夫量化">
+            </a>
             <div>
-                <a href="https://www.kungfu-trader.com/" target="_blank" style="font-size: 1.2rem;">Website</a>
+                <!-- <a href="https://www.kungfu-trader.com/" target="_blank" style="font-size: 1.2rem;">Website</a> -->
             </div>
         </div>
     </header>
-    <div class="container">
-        <div class="card" style="width: 100%; margin-top: 2em;">
-            <div class="card-body">
-                <h3>{{product}}</h3>
-                <p class="card-text">{{description}}</p>
-                <div style="margin-left: -0.5em;">
-                    <a href="https://releases.kungfu-trader.com/{{product}}/release-stable.html" target="_blank"
-                        class="btn btn-primary" style="margin: .5em">Check
-                        {{product}} Releases</a>
-                    <a href="https://releases.kungfu-trader.com/artifact-kungfu/release-stable.html" target="_blank"
-                        class="btn btn-primary" style="margin: .5em">Check
-                        artifact-kungfu Releases</a>
+    <div class="container panel">
+        <div class="layui-panel" style="margin: 48px 0 32px; padding: 16px 16px 0;">
+            <div class="layui-card-body">
+                <h2>{{product}}</h2>
+                <p class="card-text">{{{description}}}</p>
+                <div class="layui-btn-container">
+                    <button type="button" class="layui-btn layui-bg-blue">
+                        <a href="{{baseUrl}}/{{product}}/release-stable.html" target="_blank" class="btn btn-primary"
+                            style="margin: .5em">Check
+                            {{product}} Releases</a>
+                    </button>
+                    <button type="button" class="layui-btn layui-bg-blue">
+                        <a href="{{baseUrl}}/artifact-kungfu/release-stable.html" target="_blank"
+                            class="btn btn-primary" style="margin: .5em">Check
+                            artifact-kungfu Releases</a>
+                    </button>
                 </div>
             </div>
         </div>
-        <h4 style="margin-top: 1em;">stables</h4>
-        <div class="list-group" style="margin-top: 1.2em;" id="stables-list">
-            {{#stables}}
-            <a href="{{{url}}}" class="list-group-item list-group-item-action" aria-current="true">
-                <div class="release-item">
-                    <div class="release-item-left">{{version}}</div>
-                    {{#coreUrl}}
-                    <div class="release-item-right">
-                        <div data-href="{{{coreUrl}}}" class="core-link">
-                            <span>kungfu-core</span>
-                            <span class="badge rounded-pill bg-primary">{{coreVersion}}</span>
-                        </div>
-                    </div>
-                    {{/coreUrl}}
-                </div>
-            </a>
-            {{/stables}}
-        </div>
-        <h4 style="margin-top: 2em;">prereleases</h4>
-        <div class="list-group" style="margin-top: 1.2em;" id="prereleases-list">
-            {{#prereleases}}
-            <a href="{{{url}}}" class="list-group-item list-group-item-action" aria-current="true">
-                <div class="release-item">
-                    <div class="release-item-left">{{version}}</div>
-                    {{#coreUrl}}
-                    <div class="release-item-right">
-                        <div data-href="{{{coreUrl}}}" class="core-link">
-                            <span>kungfu-core</span>
-                            <span class="badge rounded-pill bg-primary">{{coreVersion}}</span>
-                        </div>
-                    </div>
-                    {{/coreUrl}}
-                </div>
-            </a>
-            {{/prereleases}}
+        <div id="table-container" style="opacity: 0;">
+            <h3 style="margin: 4px 0 16px;">stables</h3>
+            <div id="stable-table"></div>
+            <h3 style="margin: 24px 0 16px;">prereleases</h3>
+            <div id="prereleases-table"></div>
         </div>
     </div>
     <footer class="footer">
@@ -132,15 +150,60 @@
         <a rel="external" title="备案号" class="link" href="http://beian.miit.gov.cn">京ICP备19056728号-1</a>
     </footer>
     <script>
-        window.onload = function () {
-            document.querySelectorAll('.core-link').forEach(item => {
-                item.addEventListener('click', (e) => {
-                    e.stopPropagation();
-                    e.preventDefault();
-                    location.href = item.getAttribute('data-href');
-                })
+        const createTables = (data, elem) => {
+            layui.use('table', function () {
+                var treeTable = layui.treeTable;
+                var inst = treeTable.render({
+                    elem,
+                    tree: {
+                        customName: {
+                            name: 'version',
+                            id: 'version',
+                        },
+                        view: {
+                            showIcon: false
+                        }
+                    },
+                    cols: [[
+                        {
+                            field: 'version', title: 'Version', minWidth: 200, sort: true, templet: function (b) {
+                                return `<a href="${b.url}" target="_blank">${b.name} ${b.version}</a>`
+                            }
+                        },
+                        {
+                            field: 'timestamp', title: 'Date', minWidth: 120, sort: true, templet: function (b) {
+                                return new Date(b.timestamp).toLocaleDateString();
+                            }
+                        },
+                        {
+                            field: 'coreVersion', title: 'Kungfu-core', minWidth: 200, sort: true, templet: function (b) {
+                                return `<a href="${b.coreUrl}" target="_blank">${b.coreVersion}</a>`
+                            }
+                        },
+                        {
+                            field: 'action', title: 'Action', width: 160, templet: function (b) {
+                                const doc = b.docUrl ? `<a href="${b.docUrl}" target="_blank">Docs</a>` : ''
+                                return `
+                                <a href="${b.url}" target="_blank" style="margin-right: 16px;">Releases</a>
+                                ${doc}
+                            `
+                            }
+                        }
+                    ]],
+                    data,
+                    page: false
+                });
             });
-        };
+        }
+
+        function init() {
+            const stables = JSON.parse('{{{stables}}}');
+            const prereleases = JSON.parse('{{{prereleases}}}');
+            createTables(stables, '#stable-table');
+            createTables(prereleases, '#prereleases-table');
+            setTimeout(() => document.getElementById('table-container').style.opacity = 1);
+        }
+        init()
     </script>
 </body>
 
