[fix] template style

--- a/templates/release.html
+++ b/templates/release.html
@@ -64,7 +64,11 @@
 
         .header {
             background-color: #000;
-            height: 91px;
+            min-height: 91px;
+        }
+        .custom-logo {
+            display: block;
+            margin: 15px 0;
         }
 
         .header .container {
@@ -76,7 +80,10 @@
         }
 
         .nav-menu {
+            height: 91px;
             white-space: nowrap;
+            text-align: right;
+            flex: 1;
         }
 
         .nav-menu-item {
