[update] add readme.md

--- a/templates/release.html
+++ b/templates/release.html
@@ -18,7 +18,7 @@
         }
 
         .container {
-            width: 95%;
+            box-sizing: border-box;
             margin-left: auto;
             margin-right: auto;
         }
@@ -26,33 +26,24 @@
         .panel {
             box-sizing: border-box;
             min-height: 400px;
-            min-height: calc(100vh - 259px);
+            min-height: calc(100vh - 234px);
             padding-bottom: 36px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
 
         @media (min-width: 578px) {
             .container {
-                max-width: 540px;
+                max-width: 100%;
             }
+
         }
 
-        @media (min-width: 768px) {
-            .container {
-                max-width: 720px;
-            }
-        }
+        @media (max-width: 922px) {
 
-
-        @media (min-width: 992px) {
-            .container {
-                max-width: 960px;
-            }
-        }
-
-
-        @media (min-width: 1200px) {
-            .container {
-                max-width: 1140px;
+            html,
+            body {
+                font-size: 13.68px;
             }
         }
 
@@ -62,13 +53,22 @@
             }
         }
 
+
         .header {
-            background-color: #000;
-            min-height: 91px;
+            background-color: rgba(0, 0, 0, .8);
+            min-height: 78px;
+            user-select: none;
         }
+
+        .custom-logo-wrap {
+            display: block;
+            height: 78px;
+            margin-left: 20px;
+        }
+
         .custom-logo {
             display: block;
-            margin: 15px 0;
+            margin-top: -2px;
         }
 
         .header .container {
@@ -80,26 +80,32 @@
         }
 
         .nav-menu {
-            height: 91px;
-            white-space: nowrap;
-            text-align: right;
-            flex: 1;
+            font-size: 18px;
+            display: flex;
+            justify-content: flex-end;
+            padding-right: 20px;
         }
 
         .nav-menu-item {
-            display: inline-block;
-            line-height: 91px;
+            line-height: 30px;
+            overflow: visible;
             margin: 0;
-            overflow: hidden;
         }
 
         .nav-menu-item a {
-            display: inline-block;
-            padding: 0 17px;
-            font-size: 17px;
+            display: block;
             color: #ffffff;
-            font-weight: 700;
             transition: all .3s ease;
+            padding: 0 18px;
+            font-weight: 400;
+        }
+
+        .nav-menu-item:last-child a {
+            padding: 0 0 0 20px;
+        }
+
+        .nav-menu-item a.active {
+            color: #F2BA02;
         }
 
         .nav-menu-item a:hover {
@@ -107,17 +113,69 @@
             color: #F2BA02;
         }
 
-        .card-text {
-            padding: 12px 0;
+        .nav-icon-wrap {
+            display: none;
+            color: #fff;
+            margin-right: 15px;
+            cursor: pointer;
+        }
+
+        .nav-icon {
+            width: 20px;
+            height: 20px;
+            padding: 5px;
+            fill: #0170b9;
+        }
+
+        .nav-wrap {
+            display: flex;
+        }
+
+        @media (max-width: 922px) {
+            .nav-menu {
+                width: 100vw;
+                font-size: 13.68px;
+                flex-direction: column;
+                padding-right: 0;
+                display: none;
+            }
+
+            .nav-menu-item {
+                background-color: #fff;
+            }
+
+            .nav-menu-item a {
+                color: #424242;
+                padding: 0;
+                line-height: 41.06px;
+                padding-left: 20px;
+            }
+
+            .nav-menu-item a:hover {
+                transform: none;
+            }
+
+            .nav-icon-wrap {
+                display: block;
+            }
+
+            .layui-panel {
+                margin-top: 24px !important;
+            }
+        }
+
+        .layui-btn-container {
+            padding-bottom: .5em;
         }
 
         .footer {
             height: 80px;
             text-align: center;
             background-color: #eeeeee;
-            padding: 20px 0;
+            padding: 20px 1em;
             color: #4b4f58;
             line-height: 24px;
+            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
         }
 
         a {
@@ -125,8 +183,12 @@
             text-decoration: none;
         }
 
-        .layui-btn a {
-            color: inherit;
+        .link-wrap {
+            margin-right: 16px;
+        }
+
+        .link-wrap .layui-btn {
+            margin: 0;
         }
 
         .layui-bg-blue {
@@ -136,56 +198,107 @@
         #table-container {
             transition: all .2s;
         }
+        .description {
+            margin: 36px 0;
+            line-height: 1.5;
+        }
+        .description p {
+            margin: 8px 0;
+        }
+
+        .description li {
+            margin-left: 1.5em;
+            list-style: disc;
+        }
+        .description code {
+            background-color: #eee;
+        }
+        
     </style>
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <a href="https://www.kungfu-trader.com/">
-                <img width="300" height="61"
-                    src="https://s3.cn-northwest-1.amazonaws.com.cn/dev.kungfu-trader.com/uploads/2023/11/cropped-功夫量化图标-官网_7-300x62.png"
-                    class="custom-logo" alt="功夫量化">
+            <a class="custom-logo-wrap" href="https://www.kungfu-trader.com/">
+                <img width="300" height="82"
+                    src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-300x82.png"
+                    class="custom-logo" alt="" decoding="async"
+                    srcset="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-300x82.png 300w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-768x211.png 768w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-600x165.png 600w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18.png 860w"
+                    sizes="(max-width: 300px) 100vw, 300px">
             </a>
-            <nav class="nav-menu">
-                <span class="nav-menu-item"><a target="_blank" href="https://docs.kungfu-trader.com/">功夫文档</a></span>
-                <span class="nav-menu-item"><a href="https://www.kungfu-trader.com/">返回首页</a></span>
+            <div class="nav-icon-wrap" id="toggle-nav">
+                <svg id="icon-open" style="display: block;" class="nav-icon" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path
+                        d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z">
+                    </path>
+                </svg>
+                <svg id="icon-close" style="display: none;" class="nav-icon" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path
+                        d="M5.293 6.707l5.293 5.293-5.293 5.293c-0.391 0.391-0.391 1.024 0 1.414s1.024 0.391 1.414 0l5.293-5.293 5.293 5.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-5.293-5.293 5.293-5.293c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
+                    </path>
+                </svg>
+            </div>
+            <nav class="nav-menu" id="nav-menu">
+                {{#menu}}
+                    <span class="nav-menu-item">
+                        <a class="{{class}}" href="{{{url}}}" aria-current="page" target="{{blank}}">{{title}}</a>
+                    </span>
+                {{/menu}}
             </nav>
         </div>
     </header>
-    <div class="container panel">
-        <div class="layui-panel" style="margin: 48px 0 32px; padding: 16px 16px 0;">
-            <div class="layui-card-body">
-                <h2>{{product}}</h2>
-                <p class="card-text">{{{description}}}</p>
-                <div class="layui-btn-container">
-                    <button type="button" class="layui-btn layui-bg-blue">
-                        <a href="{{baseUrl}}/{{product}}/release-stable.html" target="_blank" class="btn btn-primary"
-                            style="margin: .5em">Check
-                            {{product}} Releases</a>
-                    </button>
-                    {{#artifactKungfuUrl}}
-                    <button type="button" class="layui-btn layui-bg-blue">
-                        <a href="{{{artifactKungfuUrl}}}" target="_blank" class="btn btn-primary"
-                            style="margin: .5em">Check
-                            artifact-kungfu Releases</a>
-                    </button>
-                    {{/artifactKungfuUrl}}
-                </div>
-            </div>
+    <section class="container panel">
+        <div class="description">
+            <h2>{{productName}}</h2>
+            <div id="readme">{{{readme}}}</div>
         </div>
         <div id="table-container" style="opacity: 0;">
-            <h3 style="margin: 4px 0 16px;">stables</h3>
+            <h4 style="margin: 4px 0 16px;">稳定版</h4>
             <div id="stable-table"></div>
-            <h3 style="margin: 24px 0 16px;">prereleases</h3>
+            <h4 style="margin: 24px 0 16px;">预览版</h4>
             <div id="prereleases-table"></div>
         </div>
-    </div>
+    </section>
     <footer class="footer">
-        版权所有 © 北京功夫源科技发展有限责任公司 |
-        <a rel="external" title="备案号" class="link" href="http://beian.miit.gov.cn">京ICP备19056728号-1</a>
+        Copyright © 2023 [北京功夫源科技发展有限责任公司] |&nbsp;<a href="https://beian.miit.gov.cn/" target="_blank"
+            rel="noopener">京ICP备19056728号-1 </a>&nbsp; &nbsp; &nbsp;<a
+            href="https://dev.kungfu-trader.com/index.php/user_agreement/" target="_blank" rel="noopener">
+            [用户协议]</a>&nbsp; &nbsp; <a href="https://dev.kungfu-trader.com/index.php/privacy_policy" target="_blank"
+            rel="noopener">[隐私政策]</a>&nbsp; &nbsp; <a href="https://dev.kungfu-trader.com/index.php/disclaimer/"
+            target="_blank" rel="noopener">[免责声明]</a>
     </footer>
+
     <script>
+        const cols = [[
+            {
+                field: 'version', title: 'Version', minWidth: 200, sort: true, templet: function (b) {
+                    return `<a href="${b.url}" target="_blank">${b.name} ${b.version}</a>`
+                }
+            },
+            {
+                field: 'timestamp', title: 'Date', minWidth: 120, sort: true, templet: function (b) {
+                    return new Date(b.timestamp).toLocaleDateString();
+                }
+            },
+            {
+                field: 'coreVersion', title: 'kungfu-core', minWidth: 200, sort: true, templet: function (b) {
+                    return `<a href="${b.coreUrl}" target="_blank">${b.coreVersion}</a>`
+                },
+                rules: (data) => data.every(v => v.coreVersion)
+            },
+            {
+                field: 'action', title: 'Action', width: 160, templet: function (b) {
+                    const doc = b.docUrl ? `<a href="${b.docUrl}" target="_blank">文档</a>` : ''
+                    return `
+                                <a href="${b.url}" target="_blank" style="margin-right: 16px;">下载</a>
+                                ${doc}
+                            `
+                }
+            }
+        ]];
         const createTables = (data, elem) => {
             layui.use('table', function () {
                 const treeTable = layui.treeTable;
@@ -200,32 +313,7 @@
                             showIcon: false
                         }
                     },
-                    cols: [[
-                        {
-                            field: 'version', title: 'Version', minWidth: 200, sort: true, templet: function (b) {
-                                return `<a href="${b.url}" target="_blank">${b.name} ${b.version}</a>`
-                            }
-                        },
-                        {
-                            field: 'timestamp', title: 'Date', minWidth: 120, sort: true, templet: function (b) {
-                                return new Date(b.timestamp).toLocaleDateString();
-                            }
-                        },
-                        {
-                            field: 'coreVersion', title: 'Kungfu-core', minWidth: 200, sort: true, templet: function (b) {
-                                return `<a href="${b.coreUrl}" target="_blank">${b.coreVersion}</a>`
-                            }
-                        },
-                        {
-                            field: 'action', title: 'Action', width: 160, templet: function (b) {
-                                const doc = b.docUrl ? `<a href="${b.docUrl}" target="_blank">Docs</a>` : ''
-                                return `
-                                <a href="${b.url}" target="_blank" style="margin-right: 16px;">Releases</a>
-                                ${doc}
-                            `
-                            }
-                        }
-                    ]],
+                    cols: cols.filter(v => !v.rules || v.rules(data)),
                     data,
                     page: false
                 });
@@ -240,6 +328,38 @@
             setTimeout(() => document.getElementById('table-container').style.opacity = 1);
         }
         init();
+    </script>
+    <script>
+        const nav = document.getElementById('nav-menu');
+        const btn = document.getElementById('toggle-nav');
+        const iconOpen = document.getElementById('icon-open');
+        const iconClose = document.getElementById('icon-close');
+        let isShow = false;
+
+        function show() {
+            nav.style.display = 'flex';
+            iconOpen.style.display = 'none';
+            iconClose.style.display = 'block';
+            isShow = true;
+        }
+        function hide() {
+            nav.style.display = 'none';
+            iconOpen.style.display = 'block';
+            iconClose.style.display = 'none';
+            isShow = false;
+        }
+        btn.addEventListener('click', function (e) {
+            isShow ? hide() : show()
+        }, false);
+
+        window.addEventListener('resize', function () {
+            if (!isShow && document.body.offsetWidth > 922) {
+                show();
+            }
+            if (isShow && document.body.offsetWidth <= 922) {
+                hide();
+            }
+        })
     </script>
 </body>
 
