--- a/templates/release.html
+++ b/templates/release.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Previous Release | {{product}}</title>
+    <title>历史版本 | {{product}}</title>
     <meta name="theme-color" content="#e9ecef">
     <link href="https://cdn.staticfile.org/layui/2.8.18/css/layui.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/layui/2.8.18/layui.min.js"></script>
@@ -77,6 +77,7 @@
             align-items: center;
             flex-wrap: wrap;
             height: 100%;
+            max-width: 1240px;
         }
 
         .nav-menu {
@@ -118,6 +119,9 @@
             color: #fff;
             margin-right: 15px;
             cursor: pointer;
+            position: relative;
+            right: -5px;
+            top: 2px;
         }
 
         .nav-icon {
