[update] wehcat img

--- a/templates/release.html
+++ b/templates/release.html
@@ -233,6 +233,7 @@
 </head>
 
 <body>
+    <span style="display:none"><img src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/alpdwdeds.png" width="400px" height="400px" /></span>
     <header class="header">
         <div class="container">
             <a class="custom-logo-wrap" href="https://www.kungfu-trader.com/">
