--- a/templates/release.html
+++ b/templates/release.html
@@ -9,12 +9,15 @@
     <link href="https://cdn.staticfile.org/layui/2.8.18/css/layui.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/layui/2.8.18/layui.min.js"></script>
     <style>
+        html {
+            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+        }
         html,
         body {
             background-color: #fff;
             box-sizing: border-box;
-            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
             font-size: 15px;
+            -webkit-font-smoothing: antialiased;
         }
 
         .container {
@@ -26,7 +29,7 @@
         .panel {
             box-sizing: border-box;
             min-height: 400px;
-            min-height: calc(100vh - 234px);
+            min-height: calc(100vh - 214px);
             padding-bottom: 36px;
             padding-left: 20px;
             padding-right: 20px;
@@ -49,21 +52,21 @@
 
         @media (min-width: 1400px) {
             .container {
-                max-width: 1240px;
+                max-width: 1200px;
             }
         }
 
 
         .header {
             background-color: rgba(0, 0, 0, .8);
-            min-height: 78px;
+            min-height: 79px;
             user-select: none;
         }
 
         .custom-logo-wrap {
             display: block;
-            height: 78px;
-            margin-left: 20px;
+            height: 79px;
+            margin-left: 28px;
         }
 
         .custom-logo {
@@ -77,14 +80,14 @@
             align-items: center;
             flex-wrap: wrap;
             height: 100%;
-            max-width: 1240px;
+            max-width: 1200px;
         }
 
         .nav-menu {
             font-size: 18px;
             display: flex;
             justify-content: flex-end;
-            padding-right: 20px;
+            padding-right: 34px;
         }
 
         .nav-menu-item {
@@ -173,18 +176,23 @@
         }
 
         .footer {
-            height: 80px;
+            height: 60px;
             text-align: center;
-            background-color: #eeeeee;
+            background-color: #343434;
             padding: 20px 1em;
-            color: #4b4f58;
-            line-height: 24px;
-            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+            color: #fff;
+            line-height: 22.5px;
+            font-weight: 400;
+            font-size: 15px;
         }
 
         a {
             color: #0170b9;
             text-decoration: none;
+        }
+
+        .footer a {
+            color: #fff;
         }
 
         .link-wrap {
@@ -233,14 +241,16 @@
 </head>
 
 <body>
-    <span style="display:none"><img src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/alpdwdeds.png" width="400px" height="400px" /></span>
+    <span style="display:none"><img
+            src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/alpdwdeds.png"
+            width="400px" height="400px" /></span>
     <header class="header">
         <div class="container">
             <a class="custom-logo-wrap" href="https://www.kungfu-trader.com/">
                 <img width="300" height="82"
-                    src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-300x82.png"
+                    src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png"
                     class="custom-logo" alt="" decoding="async"
-                    srcset="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-300x82.png 300w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-768x211.png 768w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-600x165.png 600w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18.png 860w"
+                    srcset="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png 300w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-768x211.png 768w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-600x165.png 600w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18.png 860w"
                     sizes="(max-width: 300px) 100vw, 300px">
             </a>
             <div class="nav-icon-wrap" id="toggle-nav">
@@ -281,19 +291,21 @@
     <footer class="footer">
         <div style="max-width: 1200px; margin: 0 auto;">
             <div class="ast-footer-copyright">
-                <div style="display: inline-block; text-align: justify;">Copyright © 2017 - 2023&nbsp; &nbsp;
-                    北京功夫源科技发展有限责任公司 &nbsp; <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank"
-                        rel="noopener">京ICP备19056728号-1</a>&nbsp; &nbsp; <img loading="lazy" class="wp-image-5874"
-                        src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/12/logo01.6189a29f1.png"
-                        alt="" width="15" height="16"><a
-                        href="https://beian.mps.gov.cn/#/query/webSearch?code=11010202010762" target="_blank"
-                        rel="noopener noreferrer">京公网安备11010202010762</a></div>
-                <div style="display: inline-block; float: right;"><a
-                        href="https://www.kungfu-trader.com/index.php/user_agreement/" target="_blank"
-                        rel="noopener">[用户协议]</a> &nbsp;&nbsp;<a
-                        href="https://www.kungfu-trader.com/index.php/privacy_policy/" target="_blank" rel="noopener">[隐私政策]
-                    </a>&nbsp; &nbsp;<a href="https://www.kungfu-trader.com/index.php/disclaimer/" target="_blank"
-                        rel="noopener">[法律声明]</a></div>
+                <div style="display: inline-block; text-align: justify;"><span style="color: #ffffff;">Copyright © 2017
+                        - 2024&nbsp; &nbsp;北京功夫源科技发展有限责任公司 &nbsp; <a style="color: #ffffff;"
+                            href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank"
+                            rel="noopener">京ICP备19056728号-1</a>&nbsp; &nbsp; <img loading="lazy" class="wp-image-5874"
+                            src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/12/logo01.6189a29f1.png"
+                            alt="" width="15" height="16"><a style="color: #ffffff;"
+                            href="https://beian.mps.gov.cn/#/query/webSearch?code=11010202010762" target="_blank"
+                            rel="noopener noreferrer">京公网安备11010202010762</a></span></div>
+                <div style="display: inline-block; float: right;"><span style="color: #ffffff;"><a
+                            style="color: #ffffff;" href="https://www.kungfu-trader.com/index.php/user_agreement/"
+                            target="_blank" rel="noopener">[用户协议]</a> &nbsp;&nbsp;<a style="color: #ffffff;"
+                            href="https://www.kungfu-trader.com/index.php/privacy_policy/" target="_blank"
+                            rel="noopener">[隐私政策] </a>&nbsp; &nbsp;<a style="color: #ffffff;"
+                            href="https://www.kungfu-trader.com/index.php/disclaimer/" target="_blank"
+                            rel="noopener">[法律声明]</a></span></div>
             </div>
         </div>
     </footer>
