--- a/templates/release.html
+++ b/templates/release.html
@@ -12,6 +12,7 @@
         html {
             font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
         }
+
         html,
         body {
             background-color: #fff;
@@ -29,10 +30,11 @@
         .panel {
             box-sizing: border-box;
             min-height: 400px;
-            min-height: calc(100vh - 214px);
+            min-height: calc(100vh - 210px);
             padding-bottom: 36px;
             padding-left: 20px;
             padding-right: 20px;
+            margin-top: 110px;
         }
 
         @media (min-width: 578px) {
@@ -58,9 +60,18 @@
 
 
         .header {
-            background-color: rgba(0, 0, 0, .8);
+            background-color: #fff;
             min-height: 79px;
             user-select: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
+        }
+
+        .header-content {
+            background-color: rgba(0, 0, 0, .8);
         }
 
         .custom-logo-wrap {
@@ -176,14 +187,13 @@
         }
 
         .footer {
-            height: 60px;
+            min-height: 60px;
             text-align: center;
             background-color: #343434;
-            padding: 20px 1em;
+            padding: 20px 12px;
             color: #fff;
             line-height: 22.5px;
             font-weight: 400;
-            font-size: 15px;
         }
 
         a {
@@ -241,39 +251,38 @@
 </head>
 
 <body>
-    <span style="display:none"><img
-            src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/alpdwdeds.png"
-            width="400px" height="400px" /></span>
     <header class="header">
-        <div class="container">
-            <a class="custom-logo-wrap" href="https://www.kungfu-trader.com/">
-                <img width="300" height="82"
-                    src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png"
-                    class="custom-logo" alt="" decoding="async"
-                    srcset="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png 300w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-768x211.png 768w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-600x165.png 600w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18.png 860w"
-                    sizes="(max-width: 300px) 100vw, 300px">
-            </a>
-            <div class="nav-icon-wrap" id="toggle-nav">
-                <svg id="icon-open" style="display: block;" class="nav-icon" version="1.1"
-                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path
-                        d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z">
-                    </path>
-                </svg>
-                <svg id="icon-close" style="display: none;" class="nav-icon" version="1.1"
-                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path
-                        d="M5.293 6.707l5.293 5.293-5.293 5.293c-0.391 0.391-0.391 1.024 0 1.414s1.024 0.391 1.414 0l5.293-5.293 5.293 5.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-5.293-5.293 5.293-5.293c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
-                    </path>
-                </svg>
+        <div class="header-content">
+            <div class="container">
+                <a class="custom-logo-wrap" href="https://www.kungfu-trader.com/">
+                    <img width="300" height="82"
+                        src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png"
+                        class="custom-logo" alt="" decoding="async"
+                        srcset="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png 300w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-768x211.png 768w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18-600x165.png 600w, https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/11/cropped-log-18.png 860w"
+                        sizes="(max-width: 300px) 100vw, 300px">
+                </a>
+                <div class="nav-icon-wrap" id="toggle-nav">
+                    <svg id="icon-open" style="display: block;" class="nav-icon" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path
+                            d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z">
+                        </path>
+                    </svg>
+                    <svg id="icon-close" style="display: none;" class="nav-icon" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path
+                            d="M5.293 6.707l5.293 5.293-5.293 5.293c-0.391 0.391-0.391 1.024 0 1.414s1.024 0.391 1.414 0l5.293-5.293 5.293 5.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-5.293-5.293 5.293-5.293c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z">
+                        </path>
+                    </svg>
+                </div>
+                <nav class="nav-menu" id="nav-menu">
+                    {{#menu}}
+                    <span class="nav-menu-item">
+                        <a class="{{class}}" href="{{{url}}}" aria-current="page" target="{{blank}}">{{title}}</a>
+                    </span>
+                    {{/menu}}
+                </nav>
             </div>
-            <nav class="nav-menu" id="nav-menu">
-                {{#menu}}
-                <span class="nav-menu-item">
-                    <a class="{{class}}" href="{{{url}}}" aria-current="page" target="{{blank}}">{{title}}</a>
-                </span>
-                {{/menu}}
-            </nav>
         </div>
     </header>
     <section class="container panel">
