--- a/templates/artifact-kungfu/detail.html
+++ b/templates/artifact-kungfu/detail.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
+    <title></title>
     <meta name="theme-color" content="#e9ecef">
     <link href="https://cdn.staticfile.org/layui/2.8.18/css/layui.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/layui/2.8.18/layui.min.js"></script>
@@ -30,11 +29,7 @@
         .panel {
             box-sizing: border-box;
             min-height: 400px;
-            min-height: calc(100vh - 210px);
-            padding-bottom: 36px;
-            padding-left: 20px;
-            padding-right: 20px;
-            margin-top: 110px;
+            min-height: calc(100vh - 100px);
         }
 
         @media (min-width: 578px) {
@@ -252,63 +247,120 @@
             color: inherit;
         }
 
-        .link-wrap {
-            margin-right: 16px;
+        .content-iframe {
+            width: 100%;
+            opacity: 0;
+            transition: opacity .3s;
         }
 
-        .link-wrap .layui-btn {
-            margin: 0;
+        /* HTML: <div class="loader"></div> */
+        .loader {
+            transform: scale(2, 2);
+            width: fit-content;
+            font-size: 17px;
+            font-family: monospace;
+            line-height: 1.4;
+            font-weight: bold;
+            background:
+                linear-gradient(#000 0 0) left,
+                linear-gradient(#000 0 0) right;
+            background-repeat: no-repeat;
+            border-right: 5px solid #0000;
+            border-left: 5px solid #0000;
+            background-origin: border-box;
+            position: relative;
+            animation: l9-0 2s infinite;
         }
 
-        .layui-bg-blue {
-            background: #0066B8;
+        .loader::before {
+            content: "Loading";
         }
 
-        #table-container {
-            transition: all .2s;
+        .loader::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 22px;
+            height: 60px;
+            background:
+                linear-gradient(90deg, #000 4px, #0000 0 calc(100% - 4px), #000 0) bottom /22px 20px,
+                linear-gradient(90deg, red 4px, #0000 0 calc(100% - 4px), red 0) bottom 10px left 0/22px 6px,
+                linear-gradient(#000 0 0) bottom 3px left 0 /22px 8px,
+                linear-gradient(#000 0 0) bottom 0 left 50%/8px 16px;
+            background-repeat: no-repeat;
+            animation: l9-1 2s infinite;
         }
 
-        .description {
-            margin: 36px 0;
-            line-height: 1.5;
+        @keyframes l9-0 {
+
+            0%,
+            25% {
+                background-size: 50% 100%
+            }
+
+            25.1%,
+            75% {
+                background-size: 0 0, 50% 100%
+            }
+
+            75.1%,
+            100% {
+                background-size: 0 0, 0 0
+            }
         }
 
-        #readme p {
-            margin: 8px 0;
+        @keyframes l9-1 {
+            25% {
+                background-position: bottom, bottom 54px left 0, bottom 3px left 0, bottom 0 left 50%;
+                left: 0
+            }
+
+            25.1% {
+                background-position: bottom, bottom 10px left 0, bottom 3px left 0, bottom 0 left 50%;
+                left: 0
+            }
+
+            50% {
+                background-position: bottom, bottom 10px left 0, bottom 3px left 0, bottom 0 left 50%;
+                left: calc(100% - 22px)
+            }
+
+            75% {
+                background-position: bottom, bottom 54px left 0, bottom 3px left 0, bottom 0 left 50%;
+                left: calc(100% - 22px)
+            }
+
+            75.1% {
+                background-position: bottom, bottom 10px left 0, bottom 3px left 0, bottom 0 left 50%;
+                left: calc(100% - 22px)
+            }
         }
 
-        #readme li {
-            margin-left: 1.5em;
-            list-style: disc;
-        }
-
-        #readme code {
-            background-color: #eee;
-        }
-
-        #readme h1,
-        #readme h2 {
-            font-size: 18px;
-        }
-
-        #readme {
-            margin-top: 1em;
+        #loader-wrap {
+            position: fixed;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 200px;
+            height: 200px;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
 
 <body>
-    <header class="header" style="position: {{logo.position}}">
+    <header class="header" style="position: absolute">
         <div class="header-content">
             <div class="container">
-                <a class="custom-logo-wrap" href="{{{homePage}}}" style="height: {{logo.wrap}}px">
-                    <img
-                        width="300"
-                        src="{{{logo.url}}}"
-                        height="{{logo.height}}"
-                        style="margin-top: {{logo.offset}}px"
-                        class="custom-logo" alt=""
-                    >
+                <a class="custom-logo-wrap" href="https://www.libkungfu.cc" style="height: 72px">
+                    <img width="300"
+                        src="https://s3.cn-northwest-1.amazonaws.com.cn/www.libkungfu.cc/uploads/2024/02/cropped-核心库3.png"
+                        height="85" style="margin-top: -8px" class="custom-logo" alt="">
                 </a>
                 <div class="nav-icon-wrap" id="toggle-nav">
                     <svg id="icon-open" style="display: block;" class="nav-icon" version="1.1"
@@ -325,186 +377,70 @@
                     </svg>
                 </div>
                 <nav class="nav-menu" id="nav-menu">
-                    {{#menu}}
                     <div class="nav-menu-item">
-                        {{#url}}
-                        <a class="nav-menu-link {{class}}" href="{{{url}}}" aria-current="page" target="{{target}}">
-                            {{#icon}}
-                            <img src="{{{icon}}}" alt="" class="nav-menu-link-icon">
-                            {{/icon}}
-                            {{^icon}}
-                            {{title}}
-                            {{/icon}}
+                        <a class="nav-menu-link " href="https://docs.kungfu-trader.com/latest/index.html"
+                            aria-current="page" target="_blank">
+                            文档
                         </a>
-                        {{/url}}
-                        {{^url}}
-                        <span class="nav-menu-link {{class}}">
-                            <span>{{title}}</span>
-                            <span class="icon-arrow">
-                                <svg class="ast-arrow-svg" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"
-                                    width="11px" height="11px" viewBox="57 35.171 26 16.043"
-                                    enable-background="new 57 35.171 26 16.043" xml:space="preserve">
-                                    <path d="M57.5,38.193l12.5,12.5l12.5-12.5l-2.5-2.5l-10,10l-10-10L57.5,38.193z">
-                                    </path>
-                                </svg>
-                            </span>
-                        </span>
-                        <div class="drop-down-list">
-                            <ul>
-                                {{#children}}
-                                <li>
-                                    <a class="{{class}} nav-menu-link" href="{{{url}}}" aria-current="page"
-                                        target="{{target}}">
-                                        {{#icon}}
-                                        <img src="{{{icon}}}" alt="" class="nav-menu-link-icon">
-                                        {{/icon}}
-                                        {{^icon}}
-                                        {{title}}
-                                        {{/icon}}
-                                    </a>
-                                </li>
-                                {{/children}}
-                            </ul>
-                        </div>
-                        {{/url}}
                     </div>
-                    {{/menu}}
+                    <div class="nav-menu-item">
+                        <a class="nav-menu-link active" href="https://releases.libkungfu.cc/" aria-current="page"
+                            target="_blank">
+                            版本
+                        </a>
+                    </div>
+                    <div class="nav-menu-item">
+                        <a class="nav-menu-link " href="https://www.kungfu-trader.com/" aria-current="page"
+                            target="_blank">
+                            功夫量化
+                        </a>
+                    </div>
+                    <div class="nav-menu-item">
+                        <a class="nav-menu-link " href="https://github.com/kungfu-trader" aria-current="page"
+                            target="_blank">
+                            <img src="https://s3.cn-northwest-1.amazonaws.com.cn/www.libkungfu.cc/uploads/2024/02/github-mark-white.png"
+                                alt="" class="nav-menu-link-icon">
+                        </a>
+                    </div>
                 </nav>
             </div>
         </div>
     </header>
-    <section class="container panel">
-        <div class="description">
-            <h1>{{productName}}</h1>
-            {{#workingScheule}}
-            <div class="release-schedule" style="padding-top: 1em;">
-                <h3>发布规划</h3>
-                <table class="layui-table" style="margin: 1em 0;">
-                    <thead>
-                        <tr>
-                            <th>Release</th>
-                            <th>Codename</th>
-                            <th>Initial Release</th>
-                            <th>End-of-life</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#workingScheule.data}}
-                        <tr>
-                            <td>{{name}}</td>
-                            <td>{{Codename}}</td>
-                            <td>{{start}}</td>
-                            <td>{{end}}</td>
-                        </tr>
-                        {{/workingScheule.data}}
-                    </tbody>
-                </table>
-                <h5>发布日期详情</h5>
-                <img
-                    src="https://s3.cn-northwest-1.amazonaws.com.cn/www.libkungfu.cc/uploads/2024/02/working-schedule.png"
-                    style="display: block; width: 80%;margin: 10px auto 0;"
-                />
-            </div>
-            {{/workingScheule}}
-            <div id="readme">{{{readme}}}</div>
+    <section class="panel">
+        <div id="loader-wrap">
+            <span class="loader"></span>
         </div>
-        <div id="table-container" style="opacity: 0;">
-            <h4 style="margin: 4px 0 16px;">稳定版</h4>
-            <div id="stable-table"></div>
-            <h4 style="margin: 24px 0 16px;">预览版</h4>
-            <div id="prereleases-table"></div>
-        </div>
+        <iframe id="content" class="content-iframe" frameborder="0"></iframe>
     </section>
-    <footer class="footer" style="background-color: {{copyright.bgcolor}}; color: {{copyright.color}}">
+    <footer class="footer" style="background-color: transparent; color: #343434">
         <div style="max-width: 1200px; margin: 0 auto;">
             <div class="ast-footer-copyright">
                 <div style="display: inline-block; text-align: justify;">
                     <span>
-                        Copyright © {{copyright.year}}&nbsp; &nbsp;{{copyright.company}} &nbsp;
-                        <a href="{{{copyright.miitUrl}}}" target="_blank"
-                            rel="noopener">{{copyright.miitCode}}</a>&nbsp; &nbsp;
-                        <img loading="lazy" src="{{{copyright.icpIcon}}}" alt="" width="15" height="16">
-                        <a href="{{{copyright.mpsUrl}}}" target="_blank"
-                            rel="noopener noreferrer">{{copyright.mpsCode}}</a>
+                        Copyright © 2017 - 2024&nbsp; &nbsp;北京功夫源科技发展有限责任公司 &nbsp;
+                        <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank"
+                            rel="noopener">京ICP备19056728号-2</a>&nbsp; &nbsp;
+                        <img loading="lazy"
+                            src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/12/logo01.6189a29f1.png"
+                            alt="" width="15" height="16">
+                        <a href="https://beian.mps.gov.cn/#/query/webSearch?code=11010202010763" target="_blank"
+                            rel="noopener noreferrer">京公网安备11010202010763</a>
                     </span>
                 </div>
                 <div style="float: right;">
                     <span>
-                        {{#copyright.agreementUrl}}
-                        <a href="{{{copyright.agreementUrl}}}" target="_blank" rel="noopener">[用户协议]</a> &nbsp;&nbsp;
-                        {{/copyright.agreementUrl}}
-                        {{#copyright.privacyPolicyUrl}}
-                        <a href="{{{copyright.privacyPolicyUrl}}}" target="_blank" rel="noopener">[隐私政策] </a>&nbsp;
+                        <a href="https://www.kungfu-trader.com/index.php/user_agreement/" target="_blank"
+                            rel="noopener">[用户协议]</a> &nbsp;&nbsp;
+                        <a href="https://www.kungfu-trader.com/index.php/privacy_policy/" target="_blank"
+                            rel="noopener">[隐私政策] </a>&nbsp;
                         &nbsp;
-                        {{/copyright.privacyPolicyUrl}}
-                        {{#copyright.disclaimerUrl}}
-                        <a href="{{{copyright.disclaimerUrl}}}" target="_blank" rel="noopener">[法律声明]</a>
-                        {{/copyright.disclaimerUrl}}
+                        <a href="https://www.kungfu-trader.com/index.php/disclaimer/" target="_blank"
+                            rel="noopener">[法律声明]</a>
                     </span>
                 </div>
             </div>
         </div>
     </footer>
-
-    <script>
-        const cols = [[
-            {
-                field: 'version', title: 'Version', minWidth: 200, sort: true, templet: function (b) {
-                    return `<a href="${b.url}" target="_blank">${b.name} ${b.version}</a>`
-                }
-            },
-            {
-                field: 'timestamp', title: 'Date', minWidth: 120, sort: true, templet: function (b) {
-                    return new Date(b.timestamp).toLocaleDateString();
-                }
-            },
-            {
-                field: 'coreVersion', title: 'kungfu-core', minWidth: 200, sort: true, templet: function (b) {
-                    return `<a href="${b.coreUrl}" target="_blank">${b.coreVersion}</a>`
-                },
-                rules: (data) => data.every(v => v.coreVersion)
-            },
-            {
-                field: 'action', title: 'Action', width: 160, templet: function (b) {
-                    const doc = b.docUrl ? `<a href="${b.docUrl}" target="_blank">文档</a>` : ''
-                    return `
-                                <a href="${b.url}" target="_blank" style="margin-right: 16px;">下载</a>
-                                ${doc}
-                            `
-                }
-            }
-        ]];
-        const createTables = (data, elem) => {
-            layui.use('table', function () {
-                const treeTable = layui.treeTable;
-                const inst = treeTable.render({
-                    elem,
-                    tree: {
-                        customName: {
-                            name: 'version',
-                            id: 'version',
-                        },
-                        view: {
-                            showIcon: false
-                        }
-                    },
-                    cols: cols.map(a => a.filter(v => !v.rules || v.rules(data))),
-                    data,
-                    page: false
-                });
-            });
-        };
-
-        function init() {
-            const stables = JSON.parse('{{{stables}}}');
-            const prereleases = JSON.parse('{{{prereleases}}}');
-            createTables(stables, '#stable-table');
-            createTables(prereleases, '#prereleases-table');
-            setTimeout(() => document.getElementById('table-container').style.opacity = 1);
-        }
-        init();
-    </script>
     <script>
         const nav = document.getElementById('nav-menu');
         const btn = document.getElementById('toggle-nav');
@@ -536,6 +472,44 @@
                 hide();
             }
         })
+    </script>
+    <script>
+        function resizeIframe() {
+            const obj = document.getElementById('content');
+            setTimeout(() => {
+                obj.style.opacity = 1;
+                document.getElementById('loader-wrap').style.display = 'none';
+                obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+            }, 1000);
+            obj.contentWindow.document.querySelectorAll('header').forEach(element => {
+                element.style.display = 'none';
+            });
+            obj.contentWindow.document.querySelectorAll('footer').forEach(element => {
+                element.style.display = 'none';
+            });
+            obj.contentWindow.document.body.style.overflow = 'hidden';
+            obj.contentWindow.document.querySelectorAll('h2').forEach(element => {
+                element.innerText = element.innerText.replace('artifact-', '');
+            });
+        }
+        function getParams() {
+            if (!location.search) {
+                return;
+            }
+            return location.search.replace('?', '').split('&').reduce((acc, cur) => {
+                const [key, value] = cur.split('=');
+                acc.set(key, value)
+                return acc;
+            }, new Map());
+        }
+        const params = getParams();
+        if (params && params.get('version')) {
+            const version = params.get('version');
+            const content = document.getElementById('content');
+            content.setAttribute('src', `https://releases.libkungfu.cc/${version.split('.')[0]}/${version}/index.html`);
+            content.addEventListener('load', resizeIframe);
+            document.title = `kungfu ${version}`;
+        }
     </script>
 </body>
 
