--- a/templates/artifact-kungfu/detail.html
+++ b/templates/artifact-kungfu/detail.html
@@ -357,10 +357,9 @@
     <header class="header" style="position: absolute">
         <div class="header-content">
             <div class="container">
-                <a class="custom-logo-wrap" href="https://www.libkungfu.cc" style="height: 72px">
-                    <img width="300"
-                        src="https://s3.cn-northwest-1.amazonaws.com.cn/www.libkungfu.cc/uploads/2024/02/cropped-核心库3.png"
-                        height="85" style="margin-top: -8px" class="custom-logo" alt="">
+                <a class="custom-logo-wrap" href="{{{homePage}}}" style="height: 72px">
+                    <img width="300" src="{{{logo.url}}}" height="85" style="margin-top: -8px" class="custom-logo"
+                        alt="">
                 </a>
                 <div class="nav-icon-wrap" id="toggle-nav">
                     <svg id="icon-open" style="display: block;" class="nav-icon" version="1.1"
@@ -377,31 +376,51 @@
                     </svg>
                 </div>
                 <nav class="nav-menu" id="nav-menu">
+                    {{#menu}}
                     <div class="nav-menu-item">
-                        <a class="nav-menu-link " href="https://docs.kungfu-trader.com/latest/index.html"
-                            aria-current="page" target="_blank">
-                            文档
+                        {{#url}}
+                        <a class="nav-menu-link {{class}}" href="{{{url}}}" aria-current="page" target="{{target}}">
+                            {{#icon}}
+                            <img src="{{{icon}}}" alt="" class="nav-menu-link-icon">
+                            {{/icon}}
+                            {{^icon}}
+                            {{title}}
+                            {{/icon}}
                         </a>
+                        {{/url}}
+                        {{^url}}
+                        <span class="nav-menu-link {{class}}">
+                            <span>{{title}}</span>
+                            <span class="icon-arrow">
+                                <svg class="ast-arrow-svg" xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"
+                                    width="11px" height="11px" viewBox="57 35.171 26 16.043"
+                                    enable-background="new 57 35.171 26 16.043" xml:space="preserve">
+                                    <path d="M57.5,38.193l12.5,12.5l12.5-12.5l-2.5-2.5l-10,10l-10-10L57.5,38.193z">
+                                    </path>
+                                </svg>
+                            </span>
+                        </span>
+                        <div class="drop-down-list">
+                            <ul>
+                                {{#children}}
+                                <li>
+                                    <a class="{{class}} nav-menu-link" href="{{{url}}}" aria-current="page"
+                                        target="{{target}}">
+                                        {{#icon}}
+                                        <img src="{{{icon}}}" alt="" class="nav-menu-link-icon">
+                                        {{/icon}}
+                                        {{^icon}}
+                                        {{title}}
+                                        {{/icon}}
+                                    </a>
+                                </li>
+                                {{/children}}
+                            </ul>
+                        </div>
+                        {{/url}}
                     </div>
-                    <div class="nav-menu-item">
-                        <a class="nav-menu-link active" href="https://releases.libkungfu.cc/" aria-current="page"
-                            target="_blank">
-                            版本
-                        </a>
-                    </div>
-                    <div class="nav-menu-item">
-                        <a class="nav-menu-link " href="https://www.kungfu-trader.com/" aria-current="page"
-                            target="_blank">
-                            功夫量化
-                        </a>
-                    </div>
-                    <div class="nav-menu-item">
-                        <a class="nav-menu-link " href="https://github.com/kungfu-trader" aria-current="page"
-                            target="_blank">
-                            <img src="https://s3.cn-northwest-1.amazonaws.com.cn/www.libkungfu.cc/uploads/2024/02/github-mark-white.png"
-                                alt="" class="nav-menu-link-icon">
-                        </a>
-                    </div>
+                    {{/menu}}
                 </nav>
             </div>
         </div>
@@ -412,30 +431,31 @@
         </div>
         <iframe id="content" class="content-iframe" frameborder="0"></iframe>
     </section>
-    <footer class="footer" style="background-color: transparent; color: #343434">
+    <footer class="footer">
         <div style="max-width: 1200px; margin: 0 auto;">
             <div class="ast-footer-copyright">
                 <div style="display: inline-block; text-align: justify;">
                     <span>
-                        Copyright © 2017 - 2024&nbsp; &nbsp;北京功夫源科技发展有限责任公司 &nbsp;
-                        <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank"
-                            rel="noopener">京ICP备19056728号-2</a>&nbsp; &nbsp;
-                        <img loading="lazy"
-                            src="https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2023/12/logo01.6189a29f1.png"
-                            alt="" width="15" height="16">
-                        <a href="https://beian.mps.gov.cn/#/query/webSearch?code=11010202010763" target="_blank"
-                            rel="noopener noreferrer">京公网安备11010202010763</a>
+                        Copyright © {{copyright.year}}&nbsp; &nbsp;{{copyright.company}} &nbsp;
+                        <a href="{{{copyright.miitUrl}}}" target="_blank"
+                            rel="noopener">{{copyright.miitCode}}</a>&nbsp; &nbsp;
+                        <img loading="lazy" src="{{{copyright.icpIcon}}}" alt="" width="15" height="16">
+                        <a href="{{{copyright.mpsUrl}}}" target="_blank"
+                            rel="noopener noreferrer">{{copyright.mpsCode}}</a>
                     </span>
                 </div>
                 <div style="float: right;">
                     <span>
-                        <a href="https://www.kungfu-trader.com/index.php/user_agreement/" target="_blank"
-                            rel="noopener">[用户协议]</a> &nbsp;&nbsp;
-                        <a href="https://www.kungfu-trader.com/index.php/privacy_policy/" target="_blank"
-                            rel="noopener">[隐私政策] </a>&nbsp;
+                        {{#copyright.agreementUrl}}
+                        <a href="{{{copyright.agreementUrl}}}" target="_blank" rel="noopener">[用户协议]</a> &nbsp;&nbsp;
+                        {{/copyright.agreementUrl}}
+                        {{#copyright.privacyPolicyUrl}}
+                        <a href="{{{copyright.privacyPolicyUrl}}}" target="_blank" rel="noopener">[隐私政策] </a>&nbsp;
                         &nbsp;
-                        <a href="https://www.kungfu-trader.com/index.php/disclaimer/" target="_blank"
-                            rel="noopener">[法律声明]</a>
+                        {{/copyright.privacyPolicyUrl}}
+                        {{#copyright.disclaimerUrl}}
+                        <a href="{{{copyright.disclaimerUrl}}}" target="_blank" rel="noopener">[法律声明]</a>
+                        {{/copyright.disclaimerUrl}}
                     </span>
                 </div>
             </div>
