--- a/templates/artifact-kungfu/template.html
+++ b/templates/artifact-kungfu/template.html
@@ -71,11 +71,12 @@
 
         .header-content {
             background-color: rgba(0, 0, 0, .8);
+            overflow: hidden;
         }
 
         .custom-logo-wrap {
             display: block;
-            margin-left: 28px;
+            margin-left: 30px;
         }
 
         .custom-logo {
@@ -96,7 +97,7 @@
             font-size: 18px;
             display: flex;
             justify-content: flex-end;
-            padding-right: 34px;
+            padding-right: 30px;
         }
 
         .nav-menu-item {
@@ -104,18 +105,19 @@
             overflow: visible;
             margin: 0;
             position: relative;
+            padding-top: 0px;
         }
 
         .nav-menu-item .nav-menu-link {
             display: block;
             color: #ffffff;
             transition: all .3s ease;
-            padding: 0 18px;
+            padding: 0 32px 0 18px;
             white-space: nowrap;
         }
 
         .nav-menu-item:last-child .nav-menu-link {
-            padding: 0 0 0 20px;
+            padding: 0 0 0 14px;
         }
 
         .nav-menu-item .nav-menu-link.active {
@@ -134,6 +136,7 @@
 
         .nav-menu-item .nav-menu-link-icon {
             height: 30px;
+            margin-top: -4px;
         }
 
         .nav-menu-item .drop-down-list {
@@ -234,6 +237,9 @@
             .release-schedule-chart {
                 width: 100%;
             }
+            .nav-menu-item .nav-menu-link-icon {
+                margin-left: 4px;
+            }
         }
 
         .layui-btn-container {
@@ -310,7 +316,7 @@
         <div class="header-content">
             <div class="container">
                 <a class="custom-logo-wrap" href="{{{homePage}}}" style="height: 72px">
-                    <img width="300" src="{{{logo.url}}}" height="85" style="margin-top: -8px" class="custom-logo"
+                    <img width="300" src="{{{logo.url}}}" height="85" style="margin-top: -7px" class="custom-logo"
                         alt="">
                 </a>
                 <div class="nav-icon-wrap" id="toggle-nav">
